--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-pose": "^1.5.3",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "styled-components": "^3.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
