--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "core-js": "^2.5.7",
     "css-vars-ponyfill": "^1.7.2",
+    "flipping": "^1.0.0",
     "normalize.css": "^8.0.0",
     "popmotion": "^8.1.22",
     "react": "^16.3.2",
