--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "dependencies": {
     "core-js": "^2.5.7",
     "css-vars-ponyfill": "^1.7.2",
-    "flipping": "^1.0.0",
     "normalize.css": "^8.0.0",
-    "popmotion": "^8.1.22",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-flip-toolkit": "^2.0.8",
     "react-scripts": "1.1.4",
     "styled-components": "^3.2.6"
   },
