--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "normalize.css": "^8.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-flip-toolkit": "^3.1.0",
+    "react-flip-toolkit": "^4.0.5",
     "react-scripts": "1.1.4",
-    "styled-components": "^3.2.6"
+    "styled-components": "4.0.0@beta"
   },
   "scripts": {
     "start": "react-scripts start",
