--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "core-js": "^3.1.4",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-flip-toolkit": "6.6.9",
+    "react-flip-toolkit": "latest",
     "react-scripts": "3.0.1",
     "styled-components": "4.3.2"
   },
